--- a/style.css
+++ b/style.css
@@ -42,3 +42,45 @@ header>ul{
     width: 26px;
     height: 26px;
 }
+footer{
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    align-items: flex-end;
+}
+.goods{
+    position: absolute;
+    width: 1300px;
+    height: 500px;
+    left: 600px;
+    top: 100px;
+
+
+    display: flex;
+    justify-content: flex-start;
+}
+section>h2{
+    position: absolute;
+    width: 441px;
+    height: 68px;
+    left: 100px;
+    top: 282px;
+
+    font-family: 'Lucida Grande';
+    font-weight: 700;
+    font-size: 72px;
+    margin: 0;
+}
+section>h3{
+    position: absolute;
+    width: 320px;
+    height: 25px;
+    left: 100px;
+    top: 370px;
+
+    font-family: 'Lucida Grande';
+    font-weight: 400;
+    font-size: 26px;
+    margin: 0;
+}
