--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header>h1{
     font-weight: 500;
     font-size: 41px;
     margin: 0;
+    text-decoration: underline wavy blue;
 }
 header>ul{
     width: 220px;
@@ -42,45 +43,30 @@ header>ul{
     width: 26px;
     height: 26px;
 }
+.goods{
+    margin-top: 100px;
+    width: 100%;
+    height: 500px;
+
+    display: flex;
+    justify-content: space-between;
+}
+.goods-info>h2{
+    font-family: 'Work Sans';
+    font-size: 72px;
+    margin: 0;
+}
+.goods-info>h3{
+    font-family: 'Work Sans';
+    font-weight: 400;
+    font-size: 26px;
+    margin: 0;
+    color: #5F5F5F;
+}
 footer{
     width: 100%;
     height: 50px;
 
     display: flex;
     align-items: flex-end;
-}
-.goods{
-    position: absolute;
-    width: 1300px;
-    height: 500px;
-    left: 600px;
-    top: 100px;
-
-
-    display: flex;
-    justify-content: flex-start;
-}
-section>h2{
-    position: absolute;
-    width: 441px;
-    height: 68px;
-    left: 100px;
-    top: 282px;
-
-    font-family: 'Lucida Grande';
-    font-weight: 700;
-    font-size: 72px;
-    margin: 0;
-}
-section>h3{
-    position: absolute;
-    width: 320px;
-    height: 25px;
-    left: 100px;
-    top: 370px;
-
-    font-family: 'Lucida Grande';
-    font-weight: 400;
-    font-size: 26px;
-    margin: 0;
 }
